--- a/CSS/product.css
+++ b/CSS/product.css
@@ -87,7 +87,7 @@ button{
 
 .context textarea{
     min-height: 200px;
-    width: 500px;
+    width: 100%;
     display: inline-block;
     border:none; 
     border-radius:10px;
