--- a/CSS/RWD.css
+++ b/CSS/RWD.css
@@ -22,7 +22,7 @@
         padding: 20px 20px;
     }
     .narrow {
-        margin: 0px 20px;
+        margin: 0px;
     }
     #showmenu {
         display: inline-block;
