--- a/CSS/RWD.css
+++ b/CSS/RWD.css
@@ -8,7 +8,7 @@
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 820px) {
     .title {
         font-size: 30px;
         padding: 30px;
@@ -43,6 +43,8 @@
     }
     ul.drop-down-menu li {
         float: none; 
+        clear: both;
+        border-top: #ccc 1px solid;
     }
     ul.drop-down-menu a:hover { /* 滑鼠滑入按鈕變色*/
         background-color: #e3c85a;
@@ -50,10 +52,15 @@
     }
     ul.drop-down-menu ul {
         width: 100%;
-        top: 100%;
+        top: 60px;
+        float: left;
+        border-bottom: #ccc 1px solid;
     }
     
     ul.drop-down-menu ul li {
         text-indent: 2em;
+    }
+    #long_on:hover {
+        padding-bottom: 311px;
     }
 }
