--- a/CSS/RWD_product.css
+++ b/CSS/RWD_product.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 820px) {
     .overview {
         grid-template-columns: 1fr;
         grid-row-gap: 40px;
@@ -21,5 +21,10 @@
 
     .commodity_context img{
         height: 40px;
+    }
+}
+@media screen and (min-width: 1800px) {
+    .RWD_text {
+        font-size: 24px;
     }
 }
