--- a/CSS/aboutUS.css
+++ b/CSS/aboutUS.css
@@ -16,6 +16,9 @@
 .member_text {
     padding: 30px 0px;
     padding-left: 20px;
+    border: #4e6e81 1.5px solid;
+    border-radius: 20px;
+    background-color: white;
 }
 .member h1 {
     color: #4e6e81;
@@ -27,7 +30,7 @@
     padding: 10px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 820px) {
     .member {
         grid-template-columns: 1fr;
     }
