--- a/CSS/index.css
+++ b/CSS/index.css
@@ -38,7 +38,7 @@
 }
 .fades img {
     width: 100%;
-    height: 600px;
+    /*height: 600px;*/
     object-fit: cover;
     vertical-align: middle;
     transition: 0.5s;
